models using new data

--- a/EatingInsects/Data/extract_usable_data.ipynb
+++ b/EatingInsects/Data/extract_usable_data.ipynb
@@ -40,8 +40,8 @@
    "source": [
     "data['Type of gene product numeric'] = toNumeric(data['Type of gene product'])\n",
     "data['Cell location numeric'] = toNumeric(data['Cell location'])\n",
-    "data['Organism numeric'] = toNumeric(data['Organism'])\n",
-    "usable_data = data[['Yield(uM)','Yield(ug/ml)','Calculated MW(kDa)','Calculated pI', 'Sequence length', 'Sequence mass','Type of gene product numeric', 'Cell location numeric','Organism numeric', 'Solubility(%)']]"
+    "# data['Organism numeric'] = toNumeric(data['Organism'])\n",
+    "usable_data = data[['Solubility(%)','Yield(uM)','Yield(ug/ml)','Calculated MW(kDa)','Calculated pI', 'Sequence length', 'Sequence mass','Type of gene product numeric', 'Cell location numeric']]"
    ]
   },
   {
