add decision tree

--- a/EatingInsects/Data/extract_usable_data.ipynb
+++ b/EatingInsects/Data/extract_usable_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,23 +34,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "data['Type of gene product numeric'] = toNumeric(data['Type of gene product'])\n",
     "data['Cell location numeric'] = toNumeric(data['Cell location'])\n",
     "# data['Organism numeric'] = toNumeric(data['Organism'])\n",
-    "usable_data = data[['Solubility(%)','Yield(uM)','Yield(ug/ml)','Calculated MW(kDa)','Calculated pI', 'Sequence length', 'Sequence mass','Type of gene product numeric', 'Cell location numeric']]"
+    "usable_data = data[['Solubility(%)','Yield(uM)','Yield(ug/ml)','Calculated MW(kDa)','Calculated pI', 'Sequence length', 'Sequence mass','Type of gene product numeric', 'Cell location numeric'\n",
+    ", 'Steric parameter','Polarizability', 'Volume', 'Hydrophobicity', 'Helix probability','Sheet probability' ]]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "usable_data.to_csv('Processed Data/usable_data.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3152, 15)"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "usable_data.shape"
    ]
   }
  ],
